# mobbo-serial

./: LICENSE  README.md  board_slope_offset_correction.csv  mobboserial.spec  pyproject.toml  ref.py  sample_gui copy.py  sample_gui.py
.github/workflows/: ci.yml  publish.yml
docs/: USAGE.md
docs/superpowers/plans/: 2026-07-13-mobbo-serial-implementation.md
docs/superpowers/specs/: 2026-07-13-mobbo-serial-design.md
mobbo/: __init__.py  board.py  config.py  constants.py  cop.py  exceptions.py  protocol.py  storage.py
tests/: fake_serial.py  helpers.py  test_board_connection.py  test_board_recording.py  test_board_tare.py  test_config.py  test_constants_exceptions.py  test_cop.py  test_protocol.py  test_public_api.py  test_storage.py
